welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:2: error: not found: value Direction
  setDirection(Direction.EAST)
               ^DwarfCode:6: error: not found: value prendbiscuit
  prendbiscuit()
  ^DwarfCode:7: error: not found: value Direction
  setDirection(Direction.WEST)
               ^DwarfCode:12: error: not found: value Direction
  setDirection(Direction.EAST)
               ^DwarfCode:17: error: not found: value estFacemur
  if (estFacemur())
      ^DwarfCode:26: error: not found: value Direction
setDirection(Direction.SOUTH)
             ^DwarfCode:28: error: not found: value Direction
setDirection(Direction.WEST)
             ^